# securepass-inspector

./: .gitignore  README.md  pyproject.toml
src/: cli.py
src/checker/: patterns.py  rules.py  scorer.py
src/securepass_inspector/: cli.py  cli.py.save
src/securepass_inspector/checker/: bruteforce.py  entropy.py  hash_profiles.py  patterns.py  scorer.py
