[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "securepass-inspector"
version = "0.1.0"
description = "Password security analysis tool with risk scoring"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ritit BT", email = "ritikbt01@gmail.com" }
]

[project.scripts]
securepass-inspector = "securepass_inspector.cli:main"
